<resources>
    <string name="authors">Authors:\nBrian Tiner,\nAdam Gumieniak,\nAayush Sheth,\nDylan Clarry,\nBryan Mietkiewicz\nVersion 1.0</string>
    <string name="app_name">WeatherWardrobe</string>
    <string name="title_activity_my_wardrobe">MyWardrobe</string>
    <string name="title_activity_get_outfit">getOutfit</string>

    <!-- main -->
    <string name="my_wardrobe">My Wardrobe</string>
    <string name="refresh">Refresh Weather</string>
    <string name="laundry">Laundry Basket</string>
    <string name="temp">Current Temp:</string>
    <string name="min">Minimum Temp:</string>
    <string name="max">Maximum Temp:</string>
    <string name="weather_update">Weather has been updated</string>

    <!-- login -->
    <string name="login">Login</string>
    <string name="password">Password:</string>
    <string name="login_name">login name</string>
    <string name="login_btn">Login</string>

    <!-- Get Outfit -->
    <string name="get_outfit_btn">Get Outfit</string>
    <string name="get_outfit_title">Choose Outfit Type</string>
    <string name="get_outfit_message">Get a random outfit or choose preferences?</string>
    <string name="get_outfit_rand">Random</string>
    <string name="get_outfit_choose">Choose</string>
    <string name="get_outfit_top">Top Preferences</string>
    <string name="get_outfit_bottom">Bottom Preferences</string>
    <string name="get_outfit">Get Outfit</string>
    <string name="get_outfit_choose_bottom">Choose Bottom</string>

    <!-- Account -->
    <string name="Location">Location: </string>
    <string name="name">Name: </string>
    <string name="detect_location">Detect Location</string>
    <string name="set_location">Set Location</string>
    <string name="gps_signal_not_found">GPS signal not found</string>

    <!-- Location Dialog Box -->
    <string name="dialog_title">Set Location</string>
    <string name="hint">Enter Location</string>

    <!-- Laundry -->
    <string name="clear_button">clear basket</string>
    <string name="laundry_dialog_message">Do you want to delete this item</string>
    <string name="laundry_dialog_title">Delete Item</string>
    <string name="laundry_dialog_pos">Yes</string>
    <string name="laundry_dialog_neg">No</string>

    <!-- Add Clothing -->
    <string name="add_Clothing_Done_outfit">Done</string>
    <string name="add_Clothing_Camera_button">Add Clothing Item</string>
    <string name="add_Clothing_Add_Description">Add Description</string>
    <string name="if_no_image">Please take a photo of your clothing item.</string>
    <string name="cancelled">Cancelled</string>

    <!-- Activity Guide -->
    <string name="activity_Guide_User_Guide">User Guide</string>
    <string name="activity_Guide_Description">Weather Wardrobe is an application to help you decide what to wear based on the
current weather. The main interface displays to you the current weather and provides buttons to navigate
the application. The five buttons are Refresh Weather, Get Outfit, My Wardrobe, Laundry Basket, and Account.\n\n
The Refresh Weather button refreshes the onscreen weather to the current weather. The Get Outfit button
launches the interface that takes you step by step through the outfit selection process. The My Wardrobe button
brings you to an interface where you can upload your clothes to select outfits from. The Laundry Basket button
brings you to an interface where you can see which clothes you have already worn and can be cleared once those
clothes are cleaned. The Account button lets you see and edit your account information</string>

    <!-- My Wardrobe -->
    <string name="my_Wardrobe_add_clothing">Add Clothing</string>

    <!-- Wardrobe Item Info -->
    <string name="wardrobe_Item_Info_Delete">Delete Item</string>
    <string name="wardrobe_Item_Info_title">Item Info</string>

    <!-- clothing item layout -->
    <string name="clothing_item_clean">clean</string>

    <!-- colour list -->
    <string name="yellow">yellow</string>
    <string name="white">white</string>
    <string name="black">black</string>
    <string name="purple">purple</string>
    <string name="grey">grey</string>
    <string name="red">red</string>
    <string name="orange">orange</string>
    <string name="green">green</string>
    <string name="blue">blue</string>

    <!-- types -->
    <string name="coat">coat</string>
    <string name="tshirt">t-shirt</string>
    <string name="longsleeve">longsleeve</string>
    <string name="sweater">sweater</string>
    <string name="pants">pants</string>
    <string name="shorts">shorts</string>

    <!-- toolbar -->
    <string name="about">About</string>
    <string name="guide">User Guide</string>
    <string name="Account">Account</string>

    <!-- result -->
    <string name="top">Top:</string>
    <string name="bottom">Bottom:</string>
    <string name="confirm">Confirm</string>
    <string name="result_refresh">Refresh</string>
    <string name="outer_wear">Outer Wear:</string>
</resources>
