<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/forecastPicture"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="124dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forecastPicture" />

    <TextView
        android:id="@+id/max"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/temp" />

    <TextView
        android:id="@+id/min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/max" />

    <Button
        android:id="@+id/my_wardrobe_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_wardrobe"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="48dp"
        tools:layout_editor_absoluteY="44dp" />

    <Button
        android:id="@+id/refresh_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:text="@string/refresh"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/my_wardrobe_button"
        app:layout_constraintTop_toTopOf="@+id/my_wardrobe_button"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/laundry_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/laundry"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="584dp" />

    <Button
        android:id="@+id/get_outfit_btn"
        android:layout_width="96dp"
        android:layout_height="38dp"
        android:text="@string/get_outfit_btn"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="246dp"
        tools:layout_editor_absoluteY="584dp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="171dp"
        tools:layout_editor_absoluteY="632dp" />

</androidx.constraintlayout.widget.ConstraintLayout>