<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddClothing">

    <Spinner
        android:id="@+id/colour_spinner"
        android:layout_width="280dp"
        android:layout_height="53dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="120dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/done_outfit"
        app:layout_constraintStart_toStartOf="parent" />


    <Spinner
        android:id="@+id/types_spinner"
        android:layout_width="280dp"
        android:layout_height="53dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="216dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/done_outfit"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/done_outfit"
        android:text="@string/add_Clothing_Done_outfit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="122dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/go_spinner" />


    <Button
        android:id="@+id/camera_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginEnd="112dp"
        android:layout_marginBottom="536dp"
        android:text="@string/add_Clothing_Camera_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/go_spinner" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:text="@string/add_Clothing_Add_Description"
        app:layout_constraintBottom_toTopOf="@+id/descText"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/descText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="154dp"
        app:layout_constraintBottom_toTopOf="@+id/types_spinner"
        tools:layout_editor_absoluteX="-16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>